--- a/public/app/pages/home.html
+++ b/public/app/pages/home.html
@@ -10,7 +10,7 @@
         <div class="col-md-3" ng-repeat="d in allBoards">
             <div class="thumbnail">
                 <lable>{{d.Title}}</lable>
-                <a style="float:right;" type="button" class="btn btn-default btn-xs" href="#!/editBoard/{{d.ID}}">
+                <a ng-if="d.Metadata.AdminUsers.indexOf(window.parseInt(window.sessionData.userid)) > -1" style="float:right;" type="button" class="btn btn-default btn-xs" href="#!/editBoard/{{d.ID}}">
                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
                 </a>
                 <a style="float:right;margin-right:3px;" type="button" class="btn btn-default btn-xs" href="#!/viewBoard/{{d.ID}}">
